Fixing inconsistencies in the project conditions interfaces (edit, list, view)

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -156,8 +156,12 @@ pre {
 
 	p {
 		display: inline-block;
-		margin: 0.5rem 0;
+		margin-bottom: 0.5rem;
 		line-height: inherit;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 
 	ul {
