--- a/modules/project-conditions/client/views/projectcondition-view.html
+++ b/modules/project-conditions/client/views/projectcondition-view.html
@@ -18,7 +18,7 @@
 	
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h2>Condition Details</h2>
+			<h2>Details</h2>
 		</div>
 		<div class="panel-body detail-panel">
 			<div class="row">
@@ -27,7 +27,7 @@
 					<div class="value" ng-bind-html="condition.name"></div>
 				</div>
 				<div class="detail-row col-md-3">
-					<label for="subject">Subject</label>
+					<label>Subject</label>
 					<div ng-bind-html="condition.subject"></div>
 				</div>
 				<div class="detail-row col-md-3">
@@ -41,44 +41,30 @@
 			</div>
 			<div class="row" ng-if="condition.vcs.length > 0">
 				<div class="detail-row col-md-12">
-					<label for="shortDesc" class="control-label">Associated Valued Components</label>
-					<ul class="anchor-list">
-						<li ng-repeat="o in condition.vcs" ui-sref="p.vc.detail({vcId:o._id})">
-							<a class="title">{{o.name}}</a>
-						</li>
-					</ul>
+					<label for="shortDesc">Associated Valued Components</label>
+					<div class="anchor-list">
+						<a ng-repeat="o in condition.vcs" ui-sref="p.vc.detail({vcId:o._id})">{{o.name}}{{$last ? '' : ', '}}</a>
+					</div>
 				</div>
 			</div>
 			<div class="row" ng-if="condition.phases.length > 0">
 				<div class="detail-row col-md-12">
-					<label for="shortDesc" class="control-label">Post Certification Phases</label>
-					<ul class="anchor-list">
-						<li ng-repeat="o in condition.phases">
-							<span>{{o}}</span>
-						</li>
-					</ul>
+					<label for="shortDesc">Post Certification Phases</label>
+					<div class="anchor-list">
+						<span ng-repeat="o in condition.phases">{{o}}{{$last ? '' : ', '}}</span>
+					</div>
 				</div>
 			</div>
+			<div class="detail-row">
+				<label>Description</label>
+				<pre class="value wrap-text" ng-bind-html="condition.description"></pre>
+			</div>
+			<div class="detail-row no-margin">
+				<label>Report Requirements</label>
+				<pre class="value wrap-text" ng-bind-html="condition.reportRequirements"></pre>
+			</div>
 		</div>
-	</div>
-
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h2>Description</h2>
-		</div>
-		<div class="panel-body">
-			<pre class="value wrap-text" ng-bind-html="condition.description"></pre>
-		</div>
-	</div>
-
-	<div class="panel panel-default">
-		<div class="panel-heading">
-			<h2>Report Requirements</h2>
-		</div>
-		<div class="panel-body">
-			<pre class="value wrap-text" ng-bind-html="condition.reportRequirements"></pre>
-		</div>
-	</div>		
+	</div>	
 
 	<div class="row hidden">
 		<div class="col-sm-6">
