--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -50,7 +50,7 @@
 					<div class="form-group">
 						<button type="button" class="btn btn-default btn-sm"
 							x-email-template-chooser
-							x-project="project" 
+							x-project="project"
 							x-current="emailTemplate">Use Existing Template</button>
 					</div>
 					<div class="form-group" x-show-errors>
@@ -68,13 +68,14 @@
 
 		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
 			<div class='button-bar'>
-				<button type="button" 
-					x-add-new-recipient x-project="project" 
+				<button type="button"
+					x-add-new-recipient x-project="project"
 					x-current="adhocRecipient" class="btn btn-default btn-sm">
 					<span class="glyphicon glyphicon-plus"></span><span>Add New</span></button>
 				<button type="button"
-					x-user-search-chooser 
-					x-project="project" 
+					x-user-search-chooser
+          x-title="'Add Existing'"
+					x-project="project"
 					x-destination="existingRecipients" class="btn btn-default btn-sm">
 					<span class="glyphicon glyphicon-plus"></span><span>Add Existing</span></button>
 				<button class="btn btn-default btn-sm"
