--- a/modules/groups/client/views/group-edit.html
+++ b/modules/groups/client/views/group-edit.html
@@ -29,9 +29,10 @@
 				<div class="form-group no-margin">
 					<label>Members ({{members.length}})</label>
 					<div class="button-bar">
-						<button class="btn btn-default btn-sm" type="button" 
-							x-user-search-chooser 
-							x-project="project" 
+						<button class="btn btn-default btn-sm" type="button"
+							x-user-search-chooser
+              x-title="'Add Project Members'"
+							x-project="project"
 							x-destination="existingRecipients">
 							<span class="glyphicon glyphicon-plus"></span><span>Add Project Members</span></button>
 					</div>
@@ -39,22 +40,22 @@
 					<div class="panel panel-default no-margin">
 						<table class="table table-hover" ng-table="tableParams" show-filter="true">
 							<tr ng-repeat="o in $data">
-								<td class="name-col" 
-									header-class="'name-col'" 
-									data-title="'Name'" 
-									filter="{'displayName':'text'}" 
+								<td class="name-col"
+									header-class="'name-col'"
+									data-title="'Name'"
+									filter="{'displayName':'text'}"
 									sortable="'displayName'">{{o.displayName}}
 								</td>
-								<td class="email-col" 
-									header-class="'email-col'" 
-									data-title="'Email'" 
-									filter="{'email':'text'}" 
+								<td class="email-col"
+									header-class="'email-col'"
+									data-title="'Email'"
+									filter="{'email':'text'}"
 									sortable="'email'">{{o.email}}
 								</td>
-								<td class="org-col" 
+								<td class="org-col"
 									header-class="'org-col'"
-									data-title="'Organization'" 
-									filter="{'orgName':'text'}" 
+									data-title="'Organization'"
+									filter="{'orgName':'text'}"
 									sortable="'orgName'">{{o.orgName}}
 								</td>
 								<td class="actions-col action-x1" header-class="'actions-col action-x1'" data-title="''">
