--- a/modules/invitations/client/views/invitation-edit.html
+++ b/modules/invitations/client/views/invitation-edit.html
@@ -53,7 +53,7 @@
 
 		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
 			<div class='button-bar'>
-				<button type="button" x-user-invitation-chooser x-project="project" x-destination="existingRecipients" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span>
+				<button type="button" x-user-invitation-chooser x-project="project" x-destination="existingRecipients" x-title="'Add Existing'" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-plus"></span><span>Add Existing</span>
         </button>
 			</div>
 			<div class="panel panel-default">
