--- a/modules/artifacts/client/views/artifact-decision.html
+++ b/modules/artifacts/client/views/artifact-decision.html
@@ -1,32 +1,39 @@
-<h1 class="page-title">
-	{{artifact.name}} ({{artifact.version}})
-</h1>
 
-<div class="text-right">
-	<a class="btn btn-link btn-xs" ui-sref="p.artifact.view">Cancel</a>
-</div>
-
-<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
-
-<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-
-		<h3>Notes / Information Requests / Edits</h3>
-		<div class="form-group">
-			<textarea rows="10" class="form-control" ng-model="artifact.decisionnote" ng-if="rolePermissions[artifact.stage]"></textarea>
-		</div>
-		<div class="text-right">
-			<a class="btn btn-default" ui-sref="p.artifact.view">Cancel</a>
-			<a class="btn btn-danger" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject</a>
-			<a class="btn btn-warning" ng-click="info()" ng-if="rolePermissions[artifact.stage]">Request More Information</a>
-			<a class="btn btn-success" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Approve</a>
-		</div>
+<div class="view-title-container flex-row">
+	<h1>{{artifact.name}} ({{artifact.version}})</h1>
+	<div class="actions">
+		<a class="btn btn-sm btn-default" ui-sref="p.artifact.view">Cancel</a>
+		<a class="btn btn-sm btn-danger" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject</a>
+		<a class="btn btn-sm btn-warning" ng-click="info()" ng-if="rolePermissions[artifact.stage]">Request More Information</a>
+		<a class="btn btn-sm btn-success" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Approve</a>
 	</div>
 </div>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+<div class="view-body-container">
+	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Notes / Information Requests / Edits</h2>
+		</div>
+		<div class="panel-body">
+			<div class="form-group no-margin">
+				<textarea class="form-control" rows="6" ng-model="artifact.decisionnote" ng-if="rolePermissions[artifact.stage]"></textarea>
+			</div>
+		</div>
+	</div>
+
+	<div class="form-footer clearfix">
+		<div class="pull-right">
+			<a class="btn btn-sm btn-default" ui-sref="p.artifact.view">Cancel</a>
+			<a class="btn btn-sm btn-danger" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject</a>
+			<a class="btn btn-sm btn-warning" ng-click="info()" ng-if="rolePermissions[artifact.stage]">Request More Information</a>
+			<a class="btn btn-sm btn-success" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Approve</a>
+		</div>
+	</div>
+
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
+</div>
 
