--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2483,7 +2483,7 @@ fieldset {
 }
 
 legend {
-	margin-bottom: 1rem;
+	margin-bottom: 1.5rem;
 	font-size: 1.6rem;
 	font-weight: bold;
 	border-bottom: none;
@@ -2697,10 +2697,11 @@ form {
 }
 
 .checkbox-row {
-	margin-top: 1rem;
+	margin-top: 0.5rem;
 }
 
-.checkbox {
+.checkbox,
+.checkbox-inline {
 	margin-right: 2rem;
 	
 	input {
