--- a/modules/artifacts/client/views/artifact-approve.html
+++ b/modules/artifacts/client/views/artifact-approve.html
@@ -10,20 +10,25 @@
 
 <div class="view-body-container">
 	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
-	<div class="form-group">
-		<label class="control-label">Approval / Rejection Note</label>
-		<textarea class="form-control" rows="5" ng-model="artifact.approvalnote"></textarea>
-	</div>
-	<div class="form-footer clearfix">
-		<div class="pull-right">
-			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-danger" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject and Return for {{buttons.prev}}</a>
-			<a class="btn btn-success" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Accept for {{buttons.next}}</a>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Approval / Rejection Note</h2>
+		</div>
+		<div class="panel-body">
+			<textarea class="form-control no-margin" rows="6" ng-model="artifact.approvalnote"></textarea>
 		</div>
 	</div>
 
 	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
+	<div class="form-footer clearfix">
+		<div class="pull-right">
+			<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view">Cancel</a>
+			<button class="btn btn-danger btn-sm" title="Reject and return for {{buttons.prev}}" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject</button>
+			<button class="btn btn-success btn-sm" title="Accept for {{buttons.next}}" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Submit for {{buttons.next}}</button>
+		</div>
+	</div>
 
 </div>
 
