--- a/modules/artifacts/client/views/artifact-decision.html
+++ b/modules/artifacts/client/views/artifact-decision.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<h1>{{artifact.name}} ({{artifact.version}})</h1>
+	<h1>{{artifact.name}}&nbsp;<span class="placeholder-value">({{artifact.version}})</span></h1>
 	<div class="actions">
 		<a class="btn btn-sm btn-default" ui-sref="p.artifact.view">Cancel</a>
 		<a class="btn btn-sm btn-danger" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject</a>
@@ -23,6 +23,9 @@
 		</div>
 	</div>
 
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
+	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
 	<div class="form-footer clearfix">
 		<div class="pull-right">
 			<a class="btn btn-sm btn-default" ui-sref="p.artifact.view">Cancel</a>
@@ -31,9 +34,6 @@
 			<a class="btn btn-sm btn-success" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Approve</a>
 		</div>
 	</div>
-
-	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
-	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
 
 </div>
 
