--- a/modules/artifacts/client/views/artifact-executive.html
+++ b/modules/artifacts/client/views/artifact-executive.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<h1>{{artifact.name}} ({{artifact.version}})</h1>
+	<h1>{{artifact.name}}&nbsp;<span class="placeholder-value">({{artifact.version}})</span></h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view">Cancel</a>
 		<a class="btn btn-danger btn-sm" title="Reject and return for {{buttons.prev}}" ng-click="reject()">Reject</a>
@@ -10,20 +10,28 @@
 
 <div class="view-body-container">
 	<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
+	
 	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h2>Approval / Rejection Note</h2>
+		</div>
 		<div class="panel-body">
-			<h3>Approval / Rejection Note</h3>
 			<div class="form-group">
-				<textarea rows="10" class="form-control" ng-model="artifact.approvalnote" ng-if="rolePermissions[artifact.stage]"></textarea>
-			</div>
-			<div class="text-right">
-				<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-				<a class="btn btn-default" ng-click="reject()" ng-if="rolePermissions[artifact.stage]">Reject and return for {{buttons.prev}}</a>
-				<a class="btn btn-success" ng-click="submit()" ng-if="rolePermissions[artifact.stage]">Approve for {{buttons.next}}</a>
+				<textarea rows="6" class="form-control" ng-model="artifact.approvalnote" ng-if="rolePermissions[artifact.stage]"></textarea>
 			</div>
 		</div>
 	</div>
+
 	<div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 	<div ng-include="'modules/artifacts/client/views/partial.artifact-comments.html'"></div>
+
+	<div class="form-footer clearfix">
+		<div class="pull-right">
+			<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view">Cancel</a>
+			<a class="btn btn-danger btn-sm" title="Reject and return for {{buttons.prev}}" ng-click="reject()">Reject</a>
+			<a class="btn btn-success btn-sm" title="Approve for {{buttons.next}}" ng-click="submit()">Approve for {{buttons.next}}</a>	
+		</div>
+	</div>
+
 </div>
 
