Adding new client and server controller/model/routes to enable the uploading of signatures to users' profiles.

--- a/modules/users/client/views/settings/modal-edit-profile.client.view.html
+++ b/modules/users/client/views/settings/modal-edit-profile.client.view.html
@@ -158,6 +158,10 @@
             <input type="checkbox" ng-model="myProfile.user.viaMail" id="viaMail" name="viaMail"/>
           </div>
         </div>
+
+        <a x-modal-set-signature href class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-open"></span><span>Upload Signature</span></a>
+        <img src="{{myProfile.signatureHREF}}" id="sig" name="sig"/>
       </div>
 
       <hr>
