--- a/modules/groups/client/views/group-view.html
+++ b/modules/groups/client/views/group-view.html
@@ -2,7 +2,7 @@
 	<h1>Project Group &nbsp;&rsaquo;&nbsp; {{s.group.name}}</h1>
 	<div class="actions">
 		<button class="btn btn-default btn-sm" ui-sref="p.group.list">Cancel</button>
-		<button class="btn btn-default btn-sm" ng-if="project.userCan.createProjectUpdates" ng-click="$event.stopPropagation()" x-mode="'edit'"
+		<button class="btn btn-default btn-sm" ng-if="project.userCan.createProjectUpdate" ng-click="$event.stopPropagation()" x-mode="'edit'"
 			ui-sref="p.group.edit({groupId:s.group._id})"><span class="glyphicon glyphicon-pencil"></span><span>Edit</span>
     </button>
 	</div>
@@ -24,20 +24,20 @@
 	<div class="panel panel-default">
 		<table ng-table="tableParams" show-filter="true" class="communications-table table table-hover vc-table">
 			<tr ng-repeat="o in $data">
-				<td class="name-col" 
-					header-class="'name-col'" 
-					data-title="'Name'" 
-					filter="{'displayName':'text'}" 
+				<td class="name-col"
+					header-class="'name-col'"
+					data-title="'Name'"
+					filter="{'displayName':'text'}"
 					sortable="'displayName'">{{o.displayName}}</td>
-				<td class="email-col" 
-					header-class="'email-col'" 
-					data-title="'Email'" 
-					filter="{'email':'text'}" 
+				<td class="email-col"
+					header-class="'email-col'"
+					data-title="'Email'"
+					filter="{'email':'text'}"
 					sortable="'email'">{{o.email}}</td>
-				<td class="org-col" 
-					header-class="'org-col'" 
-					data-title="'Organization'" 
-					filter="{'orgName':'text'}" 
+				<td class="org-col"
+					header-class="'org-col'"
+					data-title="'Organization'"
+					filter="{'orgName':'text'}"
 					sortable="'orgName'">{{o.orgName}}</td>
 			</tr>
 			<tr class="no-records hidden" ng-if="!$data || $data.length === 0">
